<resources>
    <string name="app_name">Hawk</string>
    <string name="app_snippet">Time for quality</string>
    <string name="app_team">Made by CodeX</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email_title">EMAIL ADDRESS</string>
    <string name="password_title">PASSWORD</string>
    <string name="btn_enter">Enter</string>
    <string name="recover_title">Recover password</string>
    <string name="background">background</string>
    <string name="debug_refresh_text">Refresh</string>
    <string name="search_hint">Search</string>
    <string name="search_icon_content_description">search icon</string>
    <string name="project_list_default_title">All projects</string>

    <!--  Notification  -->
    <string name="notification_error_in_while_logging">Ошибка входа</string>
    <string name="notification_error_no_internet">Нет интернета</string>
</resources>